--- a/mine.omp.yaml
+++ b/mine.omp.yaml
@@ -258,18 +258,18 @@ blocks:
         template: ╰─
       - type: text
         style: plain
-        foreground: cyan
-        foreground_templates:
-          - "{{ if gt .Code 0 }}red{{ end }}"
-        template: ﬀ
-      - type: text
-        style: plain
         foreground: white
         foreground_templates:
           - "{{ if and .Segments.Path.Writable (not .Root) }}{{ else }}red{{ end }}"
         properties:
           root_icon: 
         template: "{{ if and .Root ( not .Segments.Path.Writable ) }} {{ end }}{{ if and .Root .Segments.Path.Writable }}  {{ end }} \b"
+      - type: text
+        style: plain
+        foreground: cyan
+        foreground_templates:
+          - "{{ if gt .Code 0 }}red{{ end }}"
+        template: "ﬀ "
 console_title_template: "{{ .Folder }}"
 palette:
   black: "#193549"
